objects/agf__ADM_Feature__c.object
<CustomObject>
    <fields>
        <fullName>agf__Definition__c</fullName>
        <label>Definition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Title__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>